# OpenGL_learning

./: CMakeLists.txt
source/: camera.h  fragment.fs  fragmentYellow.fs  lightCube.fs  lightCube.vs  lightFragment.fs  lightSource.fs  lightSource.vs  lightSourceFragment.fs  main.cpp  shaderClass.h  vertex.vs  vertexYellow.vs
